[gd_scene load_steps=2 format=3 uid="uid://bwbaasx4m50yb"]

[ext_resource type="Script" uid="uid://c3x8s7varfdau" path="res://scripts/tools/file_syncer.gd" id="1_m5y41"]

[node name="FileSyncer" type="Node2D"]
script = ExtResource("1_m5y41")
sync_sheets = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
